--- a/src/VSCode/settings.json
+++ b/src/VSCode/settings.json
@@ -14,7 +14,7 @@
   "editor.guides.bracketPairs": "active",
   "editor.letterSpacing": 0.3,
   "editor.lineHeight": 25,
-  "editor.minimap.enabled": false,
+  "editor.minimap.enabled": true,
   "editor.multiCursorModifier": "ctrlCmd",
   "editor.suggestSelection": "first",
   "editor.tabCompletion": "on",
@@ -36,7 +36,7 @@
   "prettier.semi": true,
   "prettier.singleQuote": true,
   "prettier.trailingComma": "all",
-  "prettier.useTabs": false,
+  "prettier.useTabs": true,
   "prettier.tabWidth": 2,
   "prettier.vueIndentScriptAndStyle": false,
 
